Fixed spacing issues

--- a/FantasyGymnastics/static/css/drawbot.css
+++ b/FantasyGymnastics/static/css/drawbot.css
@@ -1,10 +1,4 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 95vh;
-}
+
 
 .drawing-area {
     box-shadow: 0 0 6px 0 #999;
